--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="[% url.css %]/external.css">
   </head>
 
-  <body class="[% body_class || 'page' %]" data-csrf="[%- csrf_token -%]" data-layout-identifier="[% layout.identifier %]">
+  <body class="[% body_class || 'page' %]"[% IF csrf_token %] data-csrf="[%- csrf_token -%]"[% END; IF layout OR layout_obj; %] data-layout-identifier="[% layout.identifier || layout_obj.identifier %]"[% END %]>
     <div class="[% container_class || 'container-fluid' %]">
       [%
         IF page == "login" OR page == "register" OR page == "reset" OR page == "invalidsite" OR page_as_mech;
