--- a/views/data.tt
+++ b/views/data.tt
@@ -1,3 +1,16 @@
+[% INCLUDE layouts/page_header_records.tt; %]
+
+
+
+
+
+
+
+
+
+
+
+
 [% IF search %]
     <div class="row search-results">
         <h1>
