--- a/views/snippets/header_table_detail.tt
+++ b/views/snippets/header_table_detail.tt
@@ -60,7 +60,150 @@
       </div>
   
       <div class="table-header__options-right">
-      
+        [%
+          view_groups = [];
+        
+          IF user_views.personal.size;
+            view_items = [];
+        
+            FOREACH ve IN user_views.personal;
+              veid = ve.id;
+        
+              view_items.push({
+                label  = ve.name,
+                target = url.page _ "/" _ layout.identifier _ "/data?view=" _ ve.id,
+                alert  = alerts.$veid ? 1 : 0
+              });
+            END;
+        
+            view_groups.push({
+              label = views_other_user ? "Views of " _ views_other_user.value : "Personal views",
+              items = view_items
+            });
+          END;
+        
+          IF user_views.admin.size;
+            view_items = [];
+        
+            FOREACH ve IN user_views.admin;
+              veid = ve.id;
+        
+              view_items.push({
+                label  = ve.name,
+                target = url.page _ "/" _ layout.identifier _ "/data?view=" _ ve.id,
+                alert  = alerts.$veid ? 1 : 0
+              });
+            END;
+        
+            view_groups.push({
+              label = "Administration views",
+              items = view_items
+            });
+          END;
+        
+          IF user_views.shared.size;
+            view_items = [];
+        
+            FOREACH ve IN user_views.shared;
+              veid = ve.id;
+        
+              view_items.push({
+                label  = ve.name,
+                target = url.page _ "/" _ layout.identifier _ "/data?view=" _ ve.id,
+                alert  = alerts.$veid ? 1 : 0
+              });
+            END;
+        
+            view_groups.push({
+              label = "Shared views",
+              items = view_items
+            });
+          END;
+          
+        
+          INCLUDE snippets/dropdown.tt
+            id             = "views"
+            custom_classes = "dropdown--small"
+            label          = "Current view: " _  (v ? v.name : "All data")
+            filter         = "html"
+            groups         = view_groups;
+        
+        
+          IF views_limit_extra.size;
+            view_limit_groups = [{ items = [] }];
+  
+            FOR view_limit IN views_limit_extra;
+              view_limit_groups.items.push({
+                label  = view_limit.name,
+                target = url.page _ "/" _ layout.identifier _ "/data?extra=" _ view_limit.id,
+                alert  = 0
+              });
+            END;
+        
+            INCLUDE snippets/dropdown.tt
+              id             = "view_limits"
+              custom_classes = "dropdown--small"
+              label          = current_view_limit_extra.name
+              filter         = "html"
+              groups         = view_limit_groups;
+          END;
+        
+        
+        
+        
+        
+          IF layout.user_can("bulk_update") OR layout.user_can("delete") OR layout.user_can("download") OR layout.user_can("bulk_delete");
+            bulk_action_groups = [{ items = [] }];
+            
+            IF search;
+              sel_type = "records in this search";
+            ELSIF viewtype == "timeline";
+              sel_type = "selected records";
+            ELSE;
+              sel_type = "records in this view";
+            END;
+        
+            IF layout.user_can("delete") AND layout.user_can("bulk_delete");
+              bulk_action_groups.items.push({
+                type   = "modal",
+                id     = "delete_href",
+                class  = "bulk_href",
+                target = "modal_delete",
+                label  = "Delete all " _ sel_type _ "...",
+              });
+            END;
+        
+            IF layout.user_can("bulk_update");
+              bulk_action_groups.items.push({
+                id     = "update_href",
+                class  = "bulk_href",
+                target = url.page _ "/" _ layout.identifier _ "/bulk/update/",
+                label  = "Update all " _ sel_type _ "...",
+              },{
+                id     = "clone_href",
+                class  = "bulk_href",
+                target = url.page _ "/" _ layout.identifier _ "/bulk/clone/",
+                label  = "Clone all " _ sel_type _ "...",
+              });
+            END;
+        
+            # IF viewtype == "table" AND records.size AND layout.user_can("download");
+            #   bulk_action_groups.items.push({
+            #     id     = "",
+            #     class  = "",
+            #     target = url.page _ "/" _ layout.identifier _ "/data?download" _ (filter_url ? "&" _ filter_url ),
+            #     label  = "Download records",
+            #   });
+            # END;
+        
+            INCLUDE snippets/dropdown.tt
+              id             = "bulk_actions"
+              custom_classes = "dropdown--small"
+              label          = "Bulk actions"
+              filter         = "html"
+              groups         = bulk_action_groups;
+          END;
+        %]
       </div>
     </nav>
   
